# JANI

./: CMakeLists.txt  LICENSE
jani/: JaniClassTemplate.cpp  JaniClassTemplate.h  TestJani.bat  deployment_config.json  layers_config.json  worker_spawners_config.json
jani/core/: Jani.h  JaniClasses.h  JaniClientEntity.cpp  JaniClientEntity.h  JaniConfig.cpp  JaniConfig.h  JaniConnection.cpp  JaniConnection.h  JaniEntityManager.cpp  JaniEntityManager.h  JaniEnums.h  JaniInternal.h  JaniLayerCollection.cpp  JaniLayerCollection.h  JaniLog.cpp  JaniLog.h  JaniRuntime.cpp  JaniRuntime.h  JaniStructs.h  JaniTypes.h  JaniUtils.cpp  JaniUtils.h  JaniWorker.cpp  JaniWorker.h  bitset_iter.h
jani/core/config/: JaniDeploymentConfig.cpp  JaniDeploymentConfig.h  JaniLayerConfig.cpp  JaniLayerConfig.h  JaniWorkerSpawnerConfig.cpp  JaniWorkerSpawnerConfig.h
jani/core/connection/: JaniConnection.cpp  JaniConnection.h
jani/core/nonstd/: enum_bitset.hpp
jani/core/region/: JaniRegion.cpp  JaniRegion.h  JaniRegionLoader.cpp  JaniRegionLoader.h  JaniRegionSaver.cpp  JaniRegionSaver.h
jani/core/worker/: JaniClientEntity.h  JaniEntityManager.cpp  JaniEntityManager.h  JaniWorker.cpp  JaniWorker.h
jani/inspector/: InspectorCommon.h  InspectorManager.cpp  InspectorManager.h  Renderer.cpp  Renderer.h  glad.cpp  glad.h  imgui_extension.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp
jani/inspector/ui/: BaseWindow.cpp  BaseWindow.h  MainWindow.cpp  MainWindow.h  MapWindow.cpp  MapWindow.h  PropertyWindow.cpp  PropertyWindow.h  QueryWindow.cpp  QueryWindow.h
jani/runtime/: JaniBridge.cpp  JaniBridge.h  JaniDatabase.cpp  JaniDatabase.h  JaniDeploymentConfig.h  JaniLayerCollection.cpp  JaniLayerCollection.h  JaniLoadBalancer.cpp  JaniLoadBalancer.h  JaniRuntime.cpp  JaniRuntime.h  JaniRuntimeBridge.cpp  JaniRuntimeBridge.h  JaniRuntimeDatabase.cpp  JaniRuntimeDatabase.h  JaniRuntimeEntitySparseGrid.cpp  JaniRuntimeEntitySparseGrid.h  JaniRuntimeThreadContext.cpp  JaniRuntimeThreadContext.h  JaniRuntimeWorkerReference.cpp  JaniRuntimeWorkerReference.h  JaniRuntimeWorkerSpawnerReference.cpp  JaniRuntimeWorkerSpawnerReference.h  JaniRuntimeWorldController.cpp  JaniRuntimeWorldController.h  JaniWorkerController.cpp  JaniWorkerController.h  JaniWorkerInstance.cpp  JaniWorkerInstance.h  JaniWorkerSpawnerCollection.cpp  JaniWorkerSpawnerCollection.h  JaniWorkerSpawnerInstance.cpp  JaniWorkerSpawnerInstance.h  JaniWorldController.cpp  JaniWorldController.h  main.cpp
jani/snapshot/: JaniSnapshot.cpp  JaniSnapshot.h  JaniSnapshotGenerator.cpp  JaniSnapshotGenerator.h
jani/worker/: DummyWorker.cpp  DummyWorker.h  main.cpp
jani/workerspawner/: main.cpp
